# luaGPU

./: CMakeLists.txt  README.md  lua-glsl-compiler-spec.md  vcpkg.json
examples/: creature.lua  fbm_clouds.lua  fbm_landscape.lua  mandelbrot.lua  noise_lib.lua  octgrams.lua  plasma.lua  raymarcher.lua  struct_test.lua  voronoi.lua
src/: main.cpp
src/compiler/: ARCHITECTURE.md  AST.h  Compiler.cpp  Compiler.h  Emitter.cpp  Emitter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SymbolTable.cpp  SymbolTable.h  Types.cpp  Types.h
src/host/: ShaderCompiler.cpp  ShaderCompiler.h
test/: test_compiler.cpp
tools/: emit_examples.cpp  snapshot.cpp
